New Identifier API
New helper method to generate a new DID instances for clients that can't
generate them locally. This is not recommended but supported for legacy
and development purposes.

The new API endpoint is available under: "/v1/api/new_identifier"
