# proto/v1/tracking_server_api.pb.gw.go
@@ -181,6 +181,40 @@ func local_request_TrackingServerAPI_Record_0(ctx context.Context, marshaler run
 
 }
 
+func request_TrackingServerAPI_NewIdentifier_0(ctx context.Context, marshaler runtime.Marshaler, client TrackingServerAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq NewIdentifierRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.NewIdentifier(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_TrackingServerAPI_NewIdentifier_0(ctx context.Context, marshaler runtime.Marshaler, server TrackingServerAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq NewIdentifierRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.NewIdentifier(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterTrackingServerAPIHandlerServer registers the http handlers for service TrackingServerAPI to "mux".
 // UnaryRPC     :call TrackingServerAPIServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -283,6 +317,26 @@ func RegisterTrackingServerAPIHandlerServer(ctx context.Context, mux *runtime.Se
 		}
 
 		forward_TrackingServerAPI_Record_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_TrackingServerAPI_NewIdentifier_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_TrackingServerAPI_NewIdentifier_0(rctx, inboundMarshaler, server, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TrackingServerAPI_NewIdentifier_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -427,6 +481,26 @@ func RegisterTrackingServerAPIHandlerClient(ctx context.Context, mux *runtime.Se
 
 	})
 
+	mux.Handle("POST", pattern_TrackingServerAPI_NewIdentifier_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_TrackingServerAPI_NewIdentifier_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TrackingServerAPI_NewIdentifier_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -440,6 +514,8 @@ var (
 	pattern_TrackingServerAPI_RenewCredentials_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "api", "credentials_renew"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_TrackingServerAPI_Record_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "api", "record"}, "", runtime.AssumeColonVerbOpt(true)))
+
+	pattern_TrackingServerAPI_NewIdentifier_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "api", "new_identifier"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
@@ -452,4 +528,6 @@ var (
 	forward_TrackingServerAPI_RenewCredentials_0 = runtime.ForwardResponseMessage
 
 	forward_TrackingServerAPI_Record_0 = runtime.ForwardResponseMessage
+
+	forward_TrackingServerAPI_NewIdentifier_0 = runtime.ForwardResponseMessage
 )
